samples/_failures_safe/1761464247_9b6c65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5f0c8e1.c: In function ‘main’:
./samples/SAFE/__tmp_e5f0c8e1.c:153:12: error: missing terminating " character
  153 |     printf("\
      |            ^~
./samples/SAFE/__tmp_e5f0c8e1.c:153:5: error: expected expression at end of input
  153 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_e5f0c8e1.c:153:5: error: expected declaration or statement at end of input
